--- a/package.json
+++ b/package.json
@@ -9,23 +9,28 @@
     "apollo-boost": "^0.4.3",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-link": "^1.2.12",
+    "formik": "^1.5.8",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "react": "16.8.6",
+    "react-animated-slider": "^1.1.4",
     "react-animations": "^1.0.0",
     "react-apollo": "^2.5.8",
     "react-countup": "^ 4.2.0",
     "react-dom": "16.8.6",
     "react-flip-toolkit": "^6.6.9",
     "react-helmet": "^5.2.1",
+    "react-responsive": "^7.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-slick": "^0.24.0",
+    "react-tabs": "^3.0.0",
     "react-tap-event-plugin": "^3.0.3",
     "react-transition-group": "^4.2.1",
     "reactjs-popup": "^1.4.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "yarn run build:css && react-scripts start",
