--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "16.8.6",
     "react-flip-toolkit": "^6.6.9",
     "react-helmet": "^5.2.1",
+    "react-player": "^1.11.1",
     "react-responsive": "^7.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
