--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "react": "16.8.6",
     "react-animations": "^1.0.0",
     "react-apollo": "^2.5.8",
-    "react-columns": "^1.2.1",
     "react-countup": "^ 4.2.0",
     "react-dom": "16.8.6",
     "react-helmet": "^5.2.1",
     "react-image-gallery": "^0.8.18",
+    "react-lazy-load-image-component": "^1.3.2",
     "react-player": "^1.11.1",
     "react-responsive": "^7.0.0",
     "react-router-dom": "^5.0.1",
