--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "formik": "^1.5.8",
     "gatsby": "^2.13.34",
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-manifest": "^2.2.4",
@@ -15,24 +19,21 @@
     "gatsby-transformer-sharp": "^2.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-alice-carousel": "^1.15.2",
+    "react-animations": "^1.0.0",
+    "react-countup": "^ 4.2.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "react-countup": "^ 4.2.0",
+    "react-image-gallery": "^0.8.18",
+    "react-lazy-load-image-component": "^1.3.2",
+    "react-player": "^1.11.1",
     "react-slick": "^0.24.0",
     "react-tabs": "^3.0.0",
     "react-tap-event-plugin": "^3.0.3",
     "react-transition-group": "^4.2.1",
     "reactjs-popup": "^1.4.1",
     "styled-components": "^4.3.2",
-    "yup": "^0.27.0",
-    "formik": "^1.5.8",
-    "react-player": "^1.11.1",
-    "react-animations": "^1.0.0",
-    "react-image-gallery": "^0.8.18",
-    "react-lazy-load-image-component": "^1.3.2"
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2",
