--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "axios": "^0.19.0",
     "formik": "^1.5.8",
     "gatsby": "^2.13.34",
     "gatsby-image": "^2.2.6",
@@ -18,6 +19,7 @@
     "gatsby-source-filesystem": "^2.1.6",
     "gatsby-source-graphql": "^2.1.3",
     "gatsby-transformer-sharp": "^2.2.4",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-alice-carousel": "^1.15.2",
@@ -26,9 +28,10 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-image-gallery": "^0.8.18",
+    "react-images": "^1.0.0",
     "react-lazy-load-image-component": "^1.3.2",
+    "react-photo-gallery": "^8.0.0",
     "react-player": "^1.11.1",
-    "react-slick": "^0.24.0",
     "react-tabs": "^3.0.0",
     "react-tap-event-plugin": "^3.0.3",
     "react-transition-group": "^4.2.1",
