--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-lazy-load-image-component": "^1.3.2",
     "react-photo-gallery": "^8.0.0",
     "react-player": "^1.11.1",
+    "react-responsive": "^7.0.0",
     "react-tabs": "^3.0.0",
     "react-tap-event-plugin": "^3.0.3",
     "react-transition-group": "^4.2.1",
