--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formik": "^1.5.8",
     "gatsby": "^2.13.34",
     "gatsby-image": "^2.2.6",
+    "gatsby-plugin-google-analytics": "^2.1.4",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-nprogress": "^2.1.2",
     "gatsby-plugin-offline": "^2.2.4",
