--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "gatsby": "^2.13.34",
@@ -27,6 +28,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-alice-carousel": "^1.15.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-animations": "^1.0.0",
     "react-countup": "^ 4.2.0",
     "react-dom": "^16.8.6",
@@ -37,6 +39,7 @@
     "react-photo-gallery": "^8.0.0",
     "react-player": "^1.11.1",
     "react-responsive": "^7.0.0",
+    "react-spark-scroll-gsap": "^4.0.0",
     "react-tabs": "^3.0.0",
     "react-tap-event-plugin": "^3.0.3",
     "react-transition-group": "^4.2.1",
