--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-nprogress": "^2.1.2",
     "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-postcss": "^2.1.2",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.2.9",
@@ -48,12 +49,13 @@
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "prettier": "^1.18.2",
     "@fullhuman/postcss-purgecss": "1.2.0",
     "autoprefixer": "9.6.1",
     "concurrently": "4.1.1",
     "cssnano": "4.1.10",
     "postcss-cli": "6.1.3",
+    "prettier": "^1.18.2",
+    "rucksack-css": "^1.0.2",
     "tailwindcss": "1.0.5"
   },
   "keywords": [
