--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-graphql": "^2.1.3",
     "gatsby-transformer-sharp": "^2.2.4",
     "lodash": "^4.17.15",
+    "nuka-carousel": "^4.5.9",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-alice-carousel": "^1.15.2",
@@ -40,11 +41,13 @@
     "react-photo-gallery": "^8.0.0",
     "react-player": "^1.11.1",
     "react-responsive": "^7.0.0",
+    "react-slick": "^0.24.0",
     "react-spark-scroll-gsap": "^4.0.0",
     "react-tabs": "^3.0.0",
     "react-tap-event-plugin": "^3.0.3",
     "react-transition-group": "^4.2.1",
     "reactjs-popup": "^1.4.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.3.2",
     "yup": "^0.27.0"
   },
