--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sitemap": "^2.2.17",
     "gatsby-source-filesystem": "^2.1.31",
     "gatsby-source-graphql": "^2.1.18",
+    "gatsby-source-wordpress": "^3.1.44",
     "gatsby-transformer-sharp": "^2.2.21",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
