--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-countup": "^4.2.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
+    "react-html-parser": "^2.0.2",
     "react-image-gallery": "^0.8.18",
     "react-images": "^1.0.0",
     "react-lazy-load-image-component": "^1.3.2",
