--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,3 @@
 {
-  "extends": ["config:base"],
-  "assignees": ["impulse"],
-  "bumpVersion": "patch"
+  "extends": ["github>netlify/renovate-config:netlify-cms-starter"]
 }
