--- a/package.json
+++ b/package.json
@@ -46,7 +46,14 @@
     "react-transition-group": "^4.3.0",
     "reactjs-popup": "^1.5.0",
     "styled-components": "^4.4.0",
-    "yup": "^0.27.0"
+    "yup": "^0.27.0",
+    "gatsby-plugin-sass": "^2.1.0",
+    "gatsby-remark-images": "^3.1.3",
+    "gatsby-remark-normalize-paths": "^1.0.0",
+    "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-transformer-remark": "^2.6.1",
+    "gatsby-transformer-yaml": "^2.2.4",
+    "node-sass": "^4.12.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2",
@@ -69,7 +76,8 @@
     "serve": "gatsby serve",
     "build:css": "postcss src/css/index.src.css -o src/css/index.css",
     "watch:css": "postcss src/css/index.src.css -o src/css/index.css -w",
-    "dev": "concurrently \"yarn watch:css --silent\" \"yarn start --silent\""
+    "dev": "concurrently \"yarn watch:css --silent\" \"yarn start --silent\"",
+    "forestry-preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "repository": {
     "type": "git",
