--- a/package.json
+++ b/package.json
@@ -69,13 +69,14 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby develop -o",
-    "develop": "yarn dev",
+    "build": "yarn run build:css && gatsby build",
+    "develop": "yarn run build:css && gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "yarn dev",
+    "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "build:css": "postcss src/css/index.src.css -o src/css/index.css",
+    "watch:css": "postcss src/css/index.src.css -o src/css/index.css -w",
+    "dev": "concurrently \"yarn watch:css --silent\" \"yarn start --silent\"",
     "forestry-preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "repository": {
