Corect package json3

--- a/package.json
+++ b/package.json
@@ -70,13 +70,14 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn run build:css && gatsby build",
-    "develop": "yarn run build:css && gatsby develop -p 8080 -H 0.0.0.0",
+    "develop": "yarn run build:css && gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "build:css": "postcss src/css/index.src.css -o src/css/index.css",
     "watch:css": "postcss src/css/index.src.css -o src/css/index.css -w",
-    "dev": "concurrently \"yarn watch:css --silent\" \"yarn start --silent\""
+    "dev": "concurrently \"yarn watch:css --silent\" \"yarn start --silent\"",
+    "forestry-preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "repository": {
     "type": "git",
