--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,11 +1,42 @@
 ---
 new_page_extension: md
 auto_deploy: false
-admin_path: 
+admin_path: ''
 webhook_url: 
-sections: 
-upload_dir: uploads
-public_path: "/uploads"
+sections:
+- type: heading
+  label: pages
+- type: directory
+  path: content/pages
+  label: infinity
+  create: documents
+  match: "**/*"
+  new_doc_ext: md
+  templates:
+  - infinity
+- type: heading
+  label: Content
+- type: directory
+  path: content/posts
+  label: Blog Posts
+  create: documents
+  match: "**/*"
+  new_doc_ext: md
+  templates:
+  - blog-post
+- type: document
+  path: content/data/authors.yaml
+  label: Author List
+- type: document
+  path: content/data/info.json
+  label: Info Page
+- type: heading
+  label: General Config
+- type: document
+  path: config.json
+  label: Site Info
+upload_dir: content/images
+public_path: "/content/images"
 front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
