--- a/package.json
+++ b/package.json
@@ -19,12 +19,20 @@
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.11",
     "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-sass": "^2.1.0",
     "gatsby-plugin-sharp": "^2.2.29",
     "gatsby-plugin-sitemap": "^2.2.17",
+    "gatsby-remark-images": "^3.1.3",
+    "gatsby-remark-normalize-paths": "^1.0.0",
+    "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-source-filesystem": "^2.1.31",
     "gatsby-source-graphql": "^2.1.18",
+    "gatsby-transformer-json": "^2.2.15",
+    "gatsby-transformer-remark": "^2.6.1",
     "gatsby-transformer-sharp": "^2.2.21",
+    "gatsby-transformer-yaml": "^2.2.4",
     "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-alice-carousel": "^1.15.3",
@@ -46,14 +54,7 @@
     "react-transition-group": "^4.3.0",
     "reactjs-popup": "^1.5.0",
     "styled-components": "^4.4.0",
-    "yup": "^0.27.0",
-    "gatsby-plugin-sass": "^2.1.0",
-    "gatsby-remark-images": "^3.1.3",
-    "gatsby-remark-normalize-paths": "^1.0.0",
-    "gatsby-remark-relative-images": "^0.2.2",
-    "gatsby-transformer-remark": "^2.6.1",
-    "gatsby-transformer-yaml": "^2.2.4",
-    "node-sass": "^4.12.0"
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2",
